# soml

./: .gitignore  INSTALL  Makefile.am  README.oml2  android_configure.py  client_Android.mk  configure.ac  ocomm_Android.mk  oml2.spec  shared_Android.mk
build-aux/: install-android-sh  ltmain-android.sh
doc/: Makefile.am  asciidoc.conf  liboml2-api.txt  liboml2.txt  omlc_inject.3.txt
example/: Makefile.am
example/libocomm/: Makefile  client.c  server.c
example/liboml2/: README
lib/client/: Makefile.am  api.c  bin_writer.c  buffered_writer.c  buffered_writer.h  file_stream.c  filter.c  init.c  net_stream.c  text_writer.c
lib/client/filter/: factory.c  loss_filter.c  loss_filter.h  stddev_filter.c
lib/client/oml2/: omlc.h
lib/ocomm/: log.c  mt_queue.c  queue.c  socket.c
lib/ocomm/ocomm/: queue.h
lib/shared/: headers.c  marshal.c  mbuf.c  oml_util.c  schema.c
m4/: gnulib-comp.m4
python/oml4py/: oml4py.py.in
ruby/: Makefile.am  oml2-scaffold.in
ruby/oml4r/lib/: oml4r.rb.in
server/: client_handler.c  client_handler.h  database.c  database.h  database_adapter.c  fuseki_adapter.c  fuseki_adapter.h  main.c  oml2-server.c  psql_adapter.c  sqlite_adapter.c  virtuoso_adapter.c
test/lib/: Makefile.am  check_libocomm.c  check_libocomm_mt_queue.c  check_libocomm_queue.c  check_libocomm_suites.h  check_liboml2_config.c  check_liboml2_filters.c  check_liboml2_log.c  check_liboml2_mbuf.c  check_liboml2_util.c  check_liboml2_writers.c  check_server_headers.c
test/server/: Makefile.am  check_binary_protocol.c  check_text_protocol.c  issue610.rb.in  issue752.rb.in
test/system/: Makefile.am  blobgen.c  non-block.sh  run.sh  server-inst.sh
test/system/blob/: run.sh  runpg.sh
tools/view/: oml2-view
tools/view/oml2view/: __init__.py  oml2datasourcesq3.py  oml2graphpane.py  oml2view.py
